--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Template Renungan Harian</title>
 
-  <link rel="icon" href="data:,">
+  <link rel="icon" type="image/x-icon" href="logoathalia.ico">
   <link rel="stylesheet" href="style.css">
 </head>
 
